--- a/template.html
+++ b/template.html
@@ -1,4 +1,7 @@
 <div class="filepicker">
-  <ul class="filepicker-path"></ul>
-  <ul class="filepicker-files"></ul>
+  <ul class="filepicker-sources"></ul>
+  <div>
+    <ul class="filepicker-path"></ul>
+    <ul class="filepicker-files"></ul>
+  </div>
 </div>
