--- a/test/index.html
+++ b/test/index.html
@@ -11,12 +11,14 @@
     
     <script src="../build/build.js"></script>
 	<script>
-	  var FilePicker = new require('filepicker');
+    var FilePicker = require('filepicker'),
+        DropboxEngine = require('filepicker-dropbox');
 
 	  document.getElementById('open-file').onclick = function (e) {
 	    e.preventDefault();
 	    var apiKey = document.getElementById('api-key').value;
-	    var fp = new FilePicker(apiKey);
+      var fp = new FilePicker()
+        .engine(new DropboxEngine(apiKey));
 	    fp.toggle();
 	  };
 	</script>  
