Engines can now do custom rendering.

--- a/template.html
+++ b/template.html
@@ -4,4 +4,5 @@
     <ul class="filepicker-path"></ul>
     <ul class="filepicker-files"></ul>
   </div>
+  <div class="filepicker-custom"></div>
 </div>
