--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
     <script src="../build/build.js"></script>
 	<script>
     var FilePicker = require('filepicker'),
-        DropboxEngine = require('filepicker-dropbox');
+        DropboxEngine = require('matthewp-filepicker-dropbox');
 
 	  document.getElementById('open-file').onclick = function (e) {
 	    e.preventDefault();
