--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>filepicker-dropbox test</title>
+    <title>filepicker test</title>
 	  <link rel="stylesheet" href="../build/build.css" type="text/css" />
   </head>
   <body>
